[TESTS] Update .kitchen.yml

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,8 +7,6 @@ verifier:
 
 provisioner:
   name: chef_zero
-  config_rb:
-    log_level: debug
 
 platforms:
   - name: debian-8.6
@@ -17,4 +15,8 @@ suites:
   - name: default
     run_list:
       - recipe[t3-mailhog::install]
-    attributes:
+# testing uninstall is not that easy, as all resource declarations would be merged..
+#  - name: uninstall
+#    run_list:
+#      - recipe[t3-mailhog::install]
+#      - recipe[t3-mailhog::uninstall]
